# jogotecprog

./: Animation.hpp  CMakeLists.txt  Ente.hpp  Entidade.cpp  Entidade.hpp  GerenciadorGrafico.hpp  Jogador.hpp  Jogo.cpp  Jogo.hpp  Personagem.cpp  Personagem.hpp  README.md  SingleFrameAnimation.hpp  VectorTL.hpp
Jogo.xcodeproj/: project.pbxproj
Jogo.xcodeproj/project.xcworkspace/xcuserdata/shiobara.xcuserdatad/: UserInterfaceState.xcuserstate
Jogo.xcodeproj/xcuserdata/shiobara.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
include/: Ente.hpp  Entidade.hpp  GerenciadorGrafico.hpp  Jogador.hpp  Jogo.hpp  Personagem.hpp
src/: Animation.cpp  Ente.cpp  Entidade.cpp  GerenciadorGrafico.cpp  Jogador.cpp  Jogo.cpp  Personagem.cpp  SingleFrameAnimation.cpp  main.cpp
